# filu

./: README.md  index.html  package-lock.json  package.json
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/dlp/: mod.rs
src-tauri/src/media/: mod.rs
src/api/: file.ts  screen.ts
src/components/player/: settings.vue  timeline.vue  volume-controll.vue
src/pages/: home.vue  load.vue
src/store/: video.ts
src/styles/: base.css
src/utils/: color.ts  time.ts  url.ts
src/widget/video/: Player.vue
